@@ -36,6 +36,8 @@ Version 7.44 - not yet released
   - Add driver for Condor 3
   - Add driver for LX Navigation Eos / Era variometers
   - Flarm: parse flarm error messages (PFLAE) and display them
+  - LXNAV: Overload formula, use reference mass instead of dry mass
+  - OpenVario: Overload formula, use reference mass instead of dry mass
 
 Version 7.43 - 2024-08-12
 * calculations
